# MLU_EfficientGraphAlgorithms

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/workflows/: build-pr.yml
cmake/: target-antlr4-static.cmake  target-antlrlib.cmake  target-ega-test.cmake  tool-clang-tidy.cmake  tool-coverage.cmake  tool-sanitizer.cmake
grammar/: DataLexer.g4  DataParser.g4
src/: CMakeLists.txt  git_version.cpp.in  git_version.hpp  main.cpp
test/: CMakeLists.txt  basic.cpp  main.cpp
